--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/IntervalReport/v16/Server/sqlite3/db.lock
+/.vs/IntervalReport/DesignTimeBuild/.dtbcache
